--- a/ShopJewell/src/main/webapp/WEB-INF/web.xml
+++ b/ShopJewell/src/main/webapp/WEB-INF/web.xml
@@ -4,16 +4,11 @@
   <param-name>contextConfigLocation</param-name>
   <param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
   </context-param>
-  <listener>
-  <listener-class>
-  org.springframework.web.context.ContextLoaderListener
-  </listener-class>
-  </listener>
-  <servlet>
+   <servlet>
   <servlet-name>dispatcher</servlet-name>
-  <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   </servlet>
- 
+  <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  <load-on-startup>1</load-on-startup>
   <servlet-mapping>
   <servlet-name>dispatcher</servlet-name>
   <url-pattern>/</url-pattern>
